feat: support unassigned elements for list variables (#573)
Co-authored-by: Christopher Chianelli <christopher@timefold.ai>